[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/MazeSoul.png" type="Texture" id=1]
[ext_resource path="res://Player/FightPlayer.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerLife.png" type="Texture" id=3]
[ext_resource path="res://Player/BackgroundLifeBar.png" type="Texture" id=4]
[ext_resource path="res://Player/LifeBar.gd" type="Script" id=5]
[ext_resource path="res://Player/LeftArrow.png" type="Texture" id=6]
[ext_resource path="res://Player/DownArrow.png" type="Texture" id=7]
[ext_resource path="res://Player/RightArrow.png" type="Texture" id=8]
[ext_resource path="res://Player/UpArrow.png" type="Texture" id=9]
[ext_resource path="res://Player/ATKButtton.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 9.0

[sub_resource type="Animation" id=2]
resource_name = "Down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Light"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3 ]
}

[node name="Player" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( -1, -40 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )
hframes = 2
vframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/Down = SubResource( 2 )
anims/Left = SubResource( 3 )
anims/Light = SubResource( 7 )
anims/RESET = SubResource( 4 )
anims/Right = SubResource( 5 )
anims/Up = SubResource( 6 )

[node name="LifeBar" type="TextureProgress" parent="."]
margin_left = -43.0
margin_top = -515.0
margin_right = 57.0
margin_bottom = -415.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2( 611, -94 )
scale = Vector2( 1.14583, 1.02083 )
normal = ExtResource( 6 )

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2( 846, -89 )
scale = Vector2( 1.16667, 0.96875 )
normal = ExtResource( 8 )

[node name="Down" type="TouchScreenButton" parent="."]
position = Vector2( 721, -35 )
scale = Vector2( 1.27083, 1.10417 )
normal = ExtResource( 7 )

[node name="Up" type="TouchScreenButton" parent="."]
position = Vector2( 726, -161 )
scale = Vector2( 1.17708, 1.14583 )
normal = ExtResource( 9 )

[node name="ATK" type="TouchScreenButton" parent="."]
position = Vector2( -50, -65 )
scale = Vector2( 1.44792, 1.23958 )
normal = ExtResource( 10 )

[connection signal="damage" from="Player" to="LifeBar" method="_on_Player_damage"]
[connection signal="pressed" from="Left" to="Player" method="_on_Left_pressed"]
[connection signal="released" from="Left" to="Player" method="_on_Left_released"]
[connection signal="pressed" from="Right" to="Player" method="_on_Right_pressed"]
[connection signal="released" from="Right" to="Player" method="_on_Right_released"]
[connection signal="pressed" from="Down" to="Player" method="_on_Down_pressed"]
[connection signal="released" from="Down" to="Player" method="_on_Down_released"]
[connection signal="pressed" from="Up" to="Player" method="_on_Up_pressed"]
[connection signal="released" from="Up" to="Player" method="_on_Up_released"]
[connection signal="pressed" from="ATK" to="Player" method="_on_ATK_pressed"]
